# Economics

./: .gitignore  AGENTS.md  CLAUDE.md  DESCRIPTION  NAMESPACE  README.md  cleaned.dvc  folder_structure.py  input.dvc  intermediate.dvc  output.dvc  package-lock.json  package.json  pyproject.toml
.dvc/: config
R/: GMM_objective_A4.R  H_b.R  NLLS_A3.R  RcppExports.R  bid_first.R  choice.R  choice_smooth.R  choice_smooth_delta.R  compute_bids_first.R  compute_choice.R  compute_choice_smooth.R  compute_choice_smooth_delta.R  compute_implied_valuation.R  compute_indirect_utility.R  compute_indirect_utility_delta.R  compute_loglikelihood_first_price_w.R  compute_loglikelihood_second_price_w.R  compute_m0.R  compute_p_first_w.R  compute_p_second_w.R  compute_share.R  compute_share_smooth.R  compute_share_smooth_delta.R  compute_theta_linear.R  compute_winning_bids_first.R  compute_winning_bids_second.R  function.R  functions.R  h_b_.R  indirect_utility.R  inverse_bid_equation.R  inverse_bid_first.R  loglikelihoodA1.R  share.R  share_smooth.R  share_smooth_delta.R  solve_delta.R  solve_xi.R
assignment/git-workflow-bash-commands/: README.md  pyproject.toml
docs/: README.md
docs/.obsidian/: workspace.json
docs/meeting/: note_2025_12_10.md
docs/scripts/: generate_weekly_notes.py
docs/templates/: weekly-iteration.md
docs/workflow/: data_pipeline.md  git.md  reproducible_code.md  version_control.md  weekly_iterations.md  writing.md
draft/: draft.tex  library.bib  slide.tex
draft/figuretable/: tutorial_table_kable.tex
figuretable/: tutorial_table_modelsummary.tex
main/: assign9.R  assignment1.Rmd  assignment3.Rmd  assignment4.Rmd  simulate.R  test.R
main_python/: simulate.py
main_r/: simulate.R
man/: Economics-package.Rd
report/: collaborate_on_google_drive.R  make_table_figure.Rmd  make_table_figure.html  make_table_figure.md  simulate.html  simulate.qmd
scripts/: publish_exercise.sh  publish_hidden_tests.sh
slide/: README.md  ai_coding.md  bash_commands.md  data_pipeline.md  reporting_pipeline.md  reproducible_code.md  version_control.md  weekly_iterations.md
src/: Makevars  Makevars.win  RcppExports.cpp  functions.cpp
tests/: test_simulate.R  testthat.R
(+57 files in other folders)
