[tool.poetry]
name = "economics"
version = "0.1.0"
description = "Economic model simulations and visualizations"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
matplotlib = "^3.8.0"  # For plotting
numpy = "^1.26.0"      # For numerical computations

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"      # For testing
black = "^23.12.0"     # For code formatting
isort = "^5.13.0"     # For import sorting
flake8 = "^7.0.0"     # For linting
mypy = "^1.8.0"       # For type checking

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
economics = "economics.main:main"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true 