[project]
name = "economics"
version = "0.1.0"
description = "Economic model simulations and visualizations"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "matplotlib>=3.8.0,<4.0.0",  # For plotting
    "numpy>=1.26.0,<2.0.0",       # For numerical computations
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0,<8.0.0",      # For testing
    "black>=24.3.0",             # For code formatting
    "isort>=5.13.0,<6.0.0",      # For import sorting
    "flake8>=7.0.0,<8.0.0",      # For linting
    "mypy>=1.8.0,<2.0.0",        # For type checking
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatchling.build.targets.wheel]
packages = ["src/economics"]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[dependency-groups]
dev = [
    "black>=24.3.0",
]
